Feat: Slide Area

--- a/home.html
+++ b/home.html
@@ -36,11 +36,32 @@
         </div>
     </header>
     <main>
-        <section class="container">
-            <div class="sliders">
+        <section class="banner">
+            <div class="sliders" style="margin-left: -100vw;">
                 <div class="slide">
-                    ...
+                    <div class="slideArea">
+                        <h1>DESIGN IS ABOUT </br><span>COMMUNICATION</span></h1>
+                        <h2>CALL US: +00 0 1234 5678</h2>
+                        <a href="">GET IN TOUCH</a>
+                    </div>
+                </div><div class="slide">
+                    <div class="slideArea">
+                        <h1>DESIGN IS ABOUT </br><span>SERVICES</span></h1>
+                        <h2>CALL US: +00 0 1234 5678</h2>
+                        <a href="">GET IN TOUCH</a>
+                    </div>
+                </div><div class="slide">
+                    <div class="slideArea">
+                        <h1>DESIGN IS ABOUT </br><span>SOME FACTS</span></h1>
+                        <h2>CALL US: +00 0 1234 5678</h2>
+                        <a href="">GET IN TOUCH</a>
+                    </div>
                 </div>
+            </div>
+            <div class="slidersPointers">
+                <div class="pointer active"></div>
+                <div class="pointer"></div>
+                <div class="pointer"></div>
             </div>
         </section>
     </main>
