Feat: Added Framework to website black and light

--- a/index.html
+++ b/index.html
@@ -64,6 +64,21 @@
                 <div class="pointer"></div>
             </div>
         </section>
+
+        <section class="default">
+            <div class="sectionTitle">About Us</div>
+            <div class="sectionDesc">How We Are?</div>
+            <div class="sectionBody">
+                ...
+            </div>
+        </section>
+        <section class="default dark">
+            <div class="sectionTitle">Titulo de exemplo</div>
+            <div class="sectionDesc">Descrição bem legal</div>
+            <div class="sectionBody">
+                ...
+            </div>
+        </section>
     </main>
     <footer>
 
