Feat: Section About Us Finished

--- a/index.html
+++ b/index.html
@@ -42,19 +42,21 @@
                     <div class="slideArea">
                         <h1>DESIGN IS ABOUT </br><span>COMMUNICATION</span></h1>
                         <h2>CALL US: +00 0 1234 5678</h2>
-                        <a href="">GET IN TOUCH</a>
+                        <a href="" class="button">GET IN TOUCH</a>
                     </div>
-                </div><div class="slide">
+                </div>
+                <div class="slide">
                     <div class="slideArea">
                         <h1>DESIGN IS ABOUT </br><span>SERVICES</span></h1>
                         <h2>CALL US: +00 0 1234 5678</h2>
-                        <a href="">GET IN TOUCH</a>
+                        <a href="" class="button">GET IN TOUCH</a>
                     </div>
-                </div><div class="slide">
+                </div>
+                <div class="slide">
                     <div class="slideArea">
                         <h1>DESIGN IS ABOUT </br><span>SOME FACTS</span></h1>
                         <h2>CALL US: +00 0 1234 5678</h2>
-                        <a href="">GET IN TOUCH</a>
+                        <a href="" class="button">GET IN TOUCH</a>
                     </div>
                 </div>
             </div>
@@ -64,19 +66,37 @@
                 <div class="pointer"></div>
             </div>
         </section>
-
+        s
         <section class="default">
             <div class="sectionTitle">About Us</div>
             <div class="sectionDesc">How We Are?</div>
             <div class="sectionBody">
-                ...
+                <div class="section-about-us">
+                    <div class="section-about-us--left">
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis, laborum. Aliquid dicta quo
+                            suscipit, corrupti eius incidunt deserunt accusamus facilis culpa aut, omnis animi ratione
+                            voluptate iure voluptas consequuntur fugit. Lorem ipsum dolor, sit amet consectetur
+                            adipisicing elit. Minus itaque, dolores quaerat provident accusamus hic autem dolorum vitae
+                            commodi corrupti totam. Assumenda recusandae consectetur error cumque fugiat possimus
+                            aspernatur culpa. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ducimus non,
+                            laborum nemo accusantium adipisci dolorem eveniet inventore labore optio? Exercitationem
+                            cupiditate ratione perferendis veritatis neque harum facere ducimus molestiae fugiat.
+                            <br>
+                            <a href="" class="button">Learn More</a>
+                        </p>
+                    </div>
+                    <div class="section-about-us--right">
+                        <img src="./assets/media/foto9.jpg" alt="Foto de homem jogando futebol">
+                    </div>
+                </div>
             </div>
         </section>
         <section class="default dark">
             <div class="sectionTitle">Titulo de exemplo</div>
             <div class="sectionDesc">Descrição bem legal</div>
             <div class="sectionBody">
-                ...
+
             </div>
         </section>
     </main>
