Feat: Section Services Added

--- a/index.html
+++ b/index.html
@@ -93,10 +93,31 @@
             </div>
         </section>
         <section class="default dark">
-            <div class="sectionTitle">Titulo de exemplo</div>
-            <div class="sectionDesc">Descrição bem legal</div>
+            <div class="sectionTitle">Services</div>
+            <div class="sectionDesc">Services that we provide</div>
             <div class="sectionBody">
-
+                <div class="section-services">
+                    <div class="section-service">
+                        <img src="./assets/images/icones/medalha.png" alt="Ícone de medalha">
+                        <h4>High Quality Design</h4>
+                        <p>Lorem ipsum dolor sit amet.</p>
+                    </div>
+                    <div class="section-service">
+                        <img src="./assets/images/icones/estrela.png" alt="Ícone de estrela">
+                        <h4>Modern Design</h4>
+                        <p>Lorem ipsum dolor sit amet ipsum dolor sit amet.</p>
+                    </div>
+                    <div class="section-service">
+                        <img src="./assets/images/icones/relogio.png" alt="ícone de relógio">
+                        <h4>Regular Updates</h4>
+                        <p>Lorem ipsum dolor sit amet ipsum dolor sit ipsum dolor sit.</p>
+                    </div>
+                    <div class="section-service">
+                        <img src="./assets/images/icones/balao.png" alt="ícone de balão">
+                        <h4>Fast and Free Support</h4>
+                        <p>Lorem ipsum dolor sit ipsum dolor sit.</p>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
