Fix: RGBA Main Section

--- a/index.html
+++ b/index.html
@@ -40,25 +40,22 @@
             <div class="sliders" style="margin-left: -100vw;">
                 <div class="slide">
                     <div class="slideArea">
-                        <h1>DESIGN IS ABOUT </br><span>COMMUNICATION</span></h1>
+                        <h1>DESIGN IS ABOUT</br><span>COMMUNICATION</span></h1>
                         <h2>CALL US: +00 0 1234 5678</h2>
                         <a href="" class="button">GET IN TOUCH</a>
                     </div>
-                </div>
+                </div><div class="slide">
+                    <div class="slideArea">
+                        <h1>DESIGN IS ABOUT</br><span>SERVICES</span></h1>
+                        <h2>CALL US: +00 0 1234 5678</h2>
+                        <a href="" class="button">GET IN TOUCH</a>
+                    </div></div>
                 <div class="slide">
                     <div class="slideArea">
-                        <h1>DESIGN IS ABOUT </br><span>SERVICES</span></h1>
+                        <h1>DESIGN IS ABOUT</br><span>SOME FACTS</span></h1>
                         <h2>CALL US: +00 0 1234 5678</h2>
                         <a href="" class="button">GET IN TOUCH</a>
-                    </div>
-                </div>
-                <div class="slide">
-                    <div class="slideArea">
-                        <h1>DESIGN IS ABOUT </br><span>SOME FACTS</span></h1>
-                        <h2>CALL US: +00 0 1234 5678</h2>
-                        <a href="" class="button">GET IN TOUCH</a>
-                    </div>
-                </div>
+                    </div></div>
             </div>
             <div class="slidersPointers">
                 <div class="pointer active"></div>
@@ -66,7 +63,7 @@
                 <div class="pointer"></div>
             </div>
         </section>
-        s
+        
         <section class="default">
             <div class="sectionTitle">About Us</div>
             <div class="sectionDesc">How We Are?</div>
