--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
                         <h1>DESIGN IS ABOUT</br><span>SOME FACTS</span></h1>
                         <h2>CALL US: +00 0 1234 5678</h2>
                         <a href="" class="button">GET IN TOUCH</a>
-                    </div></div>
+                    </div>
+                </div>
             </div>
             <div class="slidersPointers">
                 <div class="pointer active"></div>
@@ -63,8 +64,7 @@
                 <div class="pointer"></div>
             </div>
         </section>
-        
-        <section class="default">
+        <section class="default light">
             <div class="sectionTitle">About Us</div>
             <div class="sectionDesc">How We Are?</div>
             <div class="sectionBody">
@@ -114,6 +114,135 @@
                         <h4>Fast and Free Support</h4>
                         <p>Lorem ipsum dolor sit ipsum dolor sit.</p>
                     </div>
+                </div>
+            </div>
+        </section>
+        <section class="default light">
+            <div class="sectionTitle">Our Projects Us</div>
+            <div class="sectionDesc">Who we are create</div>
+            <div class="sectionBody">
+                <div class="section-projects">
+                    <div class="section-projects--filters">
+                        <ul>
+                            <li>All</li>
+                            <li class="active">Photo</li>
+                            <li>Branding</li>
+                            <li>Adverts</li>
+                            <li>Development</li>
+                            <li>Misc</li>
+                        </ul>
+                    </div>
+                    <div class="section-projects--photos">
+                        <div class="section-projects--photo">
+                            <div class="section-projects--photoarea">
+                                <div class="section-projects--photoinfo">
+                                    <h5>About</h5>
+                                    <p>Lorem, ipsum dolor sit amet consectetur adipisici.</p>
+                                </div>
+                                <img src="./assets/media/foto1.jpg" alt="Fotos aleatórias da galeria">
+                            </div>
+                        </div>
+                        <div class="section-projects--photo">
+                            <div class="section-projects--photoarea">
+                                <div class="section-projects--photoinfo">
+                                    <h5>About</h5>
+                                    <p>Lorem, ipsum dolor sit amet consectetur adipisici.</p>
+                                </div>
+                                <img src="./assets/media/foto2.jpg" alt="Fotos aleatórias da galeria">
+                            </div>
+                        </div>
+                        <div class="section-projects--photo">
+                            <div class="section-projects--photoarea">
+                                <div class="section-projects--photoinfo">
+                                    <h5>About</h5>
+                                    <p>Lorem, ipsum dolor sit amet consectetur adipisici.</p>
+                                </div>
+                                <img src="./assets/media/foto3.jpg" alt="Fotos aleatórias da galeria">
+                            </div>
+                        </div>
+                        <div class="section-projects--photo">
+                            <div class="section-projects--photoarea">
+                                <div class="section-projects--photoinfo">
+                                    <h5>About</h5>
+                                    <p>Lorem, ipsum dolor sit amet consectetur adipisici.</p>
+                                </div>
+                                <img src="./assets/media/foto4.jpg" alt="Fotos aleatórias da galeria">
+                            </div>
+                        </div>
+                        <div class="section-projects--photo">
+                            <div class="section-projects--photoarea">
+                                <div class="section-projects--photoinfo">
+                                    <h5>About</h5>
+                                    <p>Lorem, ipsum dolor sit amet consectetur adipisici.</p>
+                                </div>
+                                <img src="./assets/media/foto5.jpg" alt="Fotos aleatórias da galeria">
+                            </div>
+                        </div>
+                        <div class="section-projects--photo">
+                            <div class="section-projects--photoarea">
+                                <div class="section-projects--photoinfo">
+                                    <h5>About</h5>
+                                    <p>Lorem, ipsum dolor sit amet consectetur adipisici.</p>
+                                </div>
+                                <img src="./assets/media/foto6.jpg" alt="Fotos aleatórias da galeria">
+                            </div>
+                        </div>
+                        <div class="section-projects--photo">
+                            <div class="section-projects--photoarea">
+                                <div class="section-projects--photoinfo">
+                                    <h5>About</h5>
+                                    <p>Lorem, ipsum dolor sit amet consectetur adipisici.</p>
+                                </div>
+                                <img src="./assets/media/foto1.jpg" alt="Fotos aleatórias da galeria">
+                            </div>
+                        </div>
+                        <div class="section-projects--photo">
+                            <div class="section-projects--photoarea">
+                                <div class="section-projects--photoinfo">
+                                    <h5>About</h5>
+                                    <p>Lorem, ipsum dolor sit amet consectetur adipisici.</p>
+                                </div>
+                                <img src="./assets/media/foto2.jpg" alt="Fotos aleatórias da galeria">
+                            </div>
+                        </div>
+                        <div class="section-projects--photo">
+                            <div class="section-projects--photoarea">
+                                <div class="section-projects--photoinfo">
+                                    <h5>About</h5>
+                                    <p>Lorem, ipsum dolor sit amet consectetur adipisici.</p>
+                                </div>
+                                <img src="./assets/media/foto3.jpg" alt="Fotos aleatórias da galeria">
+                            </div>
+                        </div>
+                        <div class="section-projects--photo">
+                            <div class="section-projects--photoarea">
+                                <div class="section-projects--photoinfo">
+                                    <h5>About</h5>
+                                    <p>Lorem, ipsum dolor sit amet consectetur adipisici.</p>
+                                </div>
+                                <img src="./assets/media/foto4.jpg" alt="Fotos aleatórias da galeria">
+                            </div>
+                        </div>
+                        <div class="section-projects--photo">
+                            <div class="section-projects--photoarea">
+                                <div class="section-projects--photoinfo">
+                                    <h5>About</h5>
+                                    <p>Lorem, ipsum dolor sit amet consectetur adipisici.</p>
+                                </div>
+                                <img src="./assets/media/foto5.jpg" alt="Fotos aleatórias da galeria">
+                            </div>
+                        </div>
+                        <div class="section-projects--photo">
+                            <div class="section-projects--photoarea">
+                                <div class="section-projects--photoinfo">
+                                    <h5>About</h5>
+                                    <p>Lorem, ipsum dolor sit amet consectetur adipisici.</p>
+                                </div>
+                                <img src="./assets/media/foto6.jpg" alt="Fotos aleatórias da galeria">
+                            </div>
+                        </div>
+                    </div>
+                    <a href="" class="button">More Projects</a>
                 </div>
             </div>
         </section>
