--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </header>
     <main>
         <section class="banner">
-            <div class="sliders" style="margin-left: -100vw;">
+            <div class="sliders" style="margin-left: 0vw;">
                 <div class="slide">
                     <div class="slideArea">
                         <h1>DESIGN IS ABOUT</br><span>COMMUNICATION</span></h1>
@@ -243,6 +243,65 @@
                         </div>
                     </div>
                     <a href="" class="button">More Projects</a>
+                </div>
+            </div>
+        </section>
+        <section class="default dark bg-team">
+            <div class="section-team-area">
+                <div class="sectionTitle">Our Team</div>
+                <div class="sectionDesc">Our Co-Workers</div>
+                <div class="sectionBody">
+                    <div class="section-team">
+                        <div class="sliders" style="margin-left: 0vw;">
+                            <div class="slide">
+                                <div class="slideArea">
+                                    <img class="section-team--avatar" src="./assets/media/mulher1.png" alt="Foto de mulher">
+                                    <div class="section-team--name">Jane Doe</div>
+                                    <div class="section-team--role">Master mind</div>
+                                    <div class="section-team--social">
+                                        <a href=""> <img src="./assets/images/icones/facebook.png" alt="Ícone de rede social"></a>
+                                        <a href=""> <img src="./assets/images/icones/googleplus.png" alt="Ícone de rede social"></a>
+                                        <a href=""> <img src="./assets/images/icones/linkedin.png" alt="Ícone de rede social"></a>
+                                        <a href=""> <img src="./assets/images/icones/pinterest.png" alt="Ícone de rede social"></a>
+                                        <a href=""> <img src="./assets/images/icones/twitter.png" alt="Ícone de rede social"></a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="slide">
+                                <div class="slideArea">
+                                    <img class="section-team--avatar" src="./assets/media/homem1.png" alt="">
+                                    <div class="section-team--name">Mike Chiller</div>
+                                    <div class="section-team--role">Create Head</div>
+                                    <div class="section-team--social">
+                                        <a href=""> <img src="./assets/images/icones/facebook.png" alt="Ícone de rede social"></a>
+                                        <a href=""> <img src="./assets/images/icones/googleplus.png" alt="Ícone de rede social"></a>
+                                        <a href=""> <img src="./assets/images/icones/linkedin.png" alt="Ícone de rede social"></a>
+                                        <a href=""> <img src="./assets/images/icones/pinterest.png" alt="Ícone de rede social"></a>
+                                        <a href=""> <img src="./assets/images/icones/twitter.png" alt="Ícone de rede social"></a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="slide">
+                                <div class="slideArea">
+                                    <img class="section-team--avatar" src="./assets/media/mulher2.png" alt="">
+                                    <div class="section-team--name">Anna Johns</div>
+                                    <div class="section-team--role">Technical Lead</div>
+                                    <div class="section-team--social">
+                                        <a href=""> <img src="./assets/images/icones/facebook.png" alt="Ícone de rede social"></a>
+                                        <a href=""> <img src="./assets/images/icones/googleplus.png" alt="Ícone de rede social"></a>
+                                        <a href=""> <img src="./assets/images/icones/linkedin.png" alt="Ícone de rede social"></a>
+                                        <a href=""> <img src="./assets/images/icones/pinterest.png" alt="Ícone de rede social"></a>
+                                        <a href=""> <img src="./assets/images/icones/twitter.png" alt="Ícone de rede social"></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="slidersPointers">
+                        <div class="pointer active"></div>
+                        <div class="pointer"></div>
+                        <div class="pointer"></div>
+                    </div>
                 </div>
             </div>
         </section>
