--- a/index.html
+++ b/index.html
@@ -305,6 +305,266 @@
                 </div>
             </div>
         </section>
+
+        <section class="default light testimonials">
+        <div class="sectionTitle">Happy Clients</div>
+        <div class="sectionDesc">Client Reviews</div>
+        <div class="sectionBody">
+            <div class="section-testimonials">
+                <div class="sliders" style="margin-left:0;">
+                    <div class="slide">
+                        <div class="slidearea">
+                            <img class="section-testimonials--avatar" src="./assets/media/homem2.png" />
+                            <div class="section-testimonials--name">John Doe</div>
+                            <div class="section-testimonials--role">Head of PR Department</div>
+                            <img class="section-testimonials--quoteimg" src="./assets/images/icones/quote.png" />
+                            <div class="section-testimonials--quote">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel eros vitae erat condimentum viverra a nec lacus. Maecenas eros lectus, rhoncus vel dictum vel, dignissim eget ligula. Vestibulum id tempus quam, sed pellentesque quam.</div>
+                        </div>
+                    </div><div class="slide">
+                        <div class="slidearea">
+                            <img class="section-testimonials--avatar" src="./assets/media/homem2.png" />
+                            <div class="section-testimonials--name">John Doe2</div>
+                            <div class="section-testimonials--role">Head of PR Department</div>
+                            <img class="section-testimonials--quoteimg" src="./assets/images/icones/quote.png" />
+                            <div class="section-testimonials--quote">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel eros vitae erat condimentum viverra a nec lacus. Maecenas eros lectus, rhoncus vel dictum vel, dignissim eget ligula. Vestibulum id tempus quam, sed pellentesque quam.</div>
+                        </div>
+                    </div><div class="slide">
+                        <div class="slidearea">
+                            <img class="section-testimonials--avatar" src="./assets/media/homem2.png" />
+                            <div class="section-testimonials--name">John Doe3</div>
+                            <div class="section-testimonials--role">Head of PR Department</div>
+                            <img class="section-testimonials--quoteimg" src="./assets/images/icones/quote.png" />
+                            <div class="section-testimonials--quote">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel eros vitae erat condimentum viverra a nec lacus. Maecenas eros lectus, rhoncus vel dictum vel, dignissim eget ligula. Vestibulum id tempus quam, sed pellentesque quam.</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="sliders-pointers">
+                    <div class="pointer active"></div>
+                    <div class="pointer"></div>
+                    <div class="pointer"></div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="default section-companies">
+        <div class="sectionBody">
+            <div class="section-companies--area">
+                <div class="section-company">
+                    <img src="./assets/media/empresa1.png" />
+                </div>
+                <div class="section-company">
+                    <img src="./assets/media/empresa2.png" />
+                </div>
+                <div class="section-company">
+                    <img src="./assets/media/empresa3.png" />
+                </div>
+                <div class="section-company">
+                    <img src="./assets/media/empresa4.png" />
+                </div>
+                <div class="section-company">
+                    <img src="./assets/media/empresa5.png" />
+                </div>
+                <div class="section-company">
+                    <img src="./assets/media/empresa6.png" />
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="default light">
+        <div class="sectionTitle">Price</div>
+        <div class="sectionDesc">Pricing Table</div>
+        <div class="sectionBody">
+            <div class="section-price">
+                    <div class="section-price--item">
+                        <div class="section-price--item-name">Express</div>
+                        <div class="section-price--item-money">$ 9.99</div>
+                        <div class="section-price--item-period">/ month</div>
+                        <div class="section-price--item-point">Tracking issues<br/>--</div>
+                        <div class="section-price--item-point">Tracking issues<br/>--</div>
+                        <div class="section-price--item-point">Tracking issues<br/>--</div>
+                        <div class="section-price--item-point">Tracking issues<br/>--</div>
+                        <a href="" class="button button--dark">Choose</a>
+                    </div>
+                    <div class="section-price--item">
+                        <div class="section-price--item-name">Express</div>
+                        <div class="section-price--item-money">$ 9.99</div>
+                        <div class="section-price--item-period">/ month</div>
+                        <div class="section-price--item-point">Tracking issues<br/>--</div>
+                        <div class="section-price--item-point">Tracking issues<br/>--</div>
+                        <div class="section-price--item-point">Tracking issues<br/>--</div>
+                        <div class="section-price--item-point">Tracking issues<br/>--</div>
+                        <a href="" class="button button--dark">Choose</a>
+                    </div>
+                    <div class="section-price--item">
+                        <div class="section-price--item-name">Express</div>
+                        <div class="section-price--item-money">$ 9.99</div>
+                        <div class="section-price--item-period">/ month</div>
+                        <div class="section-price--item-point">Tracking issues<br/>--</div>
+                        <div class="section-price--item-point">Tracking issues<br/>--</div>
+                        <div class="section-price--item-point">Tracking issues<br/>--</div>
+                        <div class="section-price--item-point">Tracking issues<br/>--</div>
+                        <a href="" class="button button--dark">Choose</a>
+                    </div>
+                    <div class="section-price--item">
+                        <div class="section-price--item-name">Express</div>
+                        <div class="section-price--item-money">$ 9.99</div>
+                        <div class="section-price--item-period">/ month</div>
+                        <div class="section-price--item-point">Tracking issues<br/>--</div>
+                        <div class="section-price--item-point">Tracking issues<br/>--</div>
+                        <div class="section-price--item-point">Tracking issues<br/>--</div>
+                        <div class="section-price--item-point">Tracking issues<br/>--</div>
+                        <a href="" class="button button--dark">Choose</a>
+                    </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="default light premium">
+        <div class="sectionTitle">Premium</div>
+        <div class="sectionDesc">Even More Features Available</div>
+        <div class="sectionBody">
+            <div class="section-premium">
+                <div class="sliders" style="margin-left:0;">
+                    <div class="slide">
+                        <div class="slidearea">
+                            <div class="section-premium--left">
+                                <img src="./assets/media/livros.png" />
+                            </div>
+                            <div class="section-premium--right">
+                                    <div class="section-premium--item">
+                                        <img src="./assets/images/icones/check.png" />
+                                        <div>
+                                            <h4>FIRST FEATURE</h4>
+                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel eros vitae erat condimentum viverra a nec lacus.<br/>
+                                            -- FEATURE ONE<br/>
+                                            -- FEATURE TWO<br/>
+                                            -- FEATURE THREE
+                                        </div>
+                                    </div>
+                                    <div class="section-premium--item">
+                                        <img src="./assets/images/icones/check.png" />
+                                        <div>
+                                            <h4>SECOND FEATURE</h4>
+                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel eros vitae erat condimentum viverra a nec lacus.
+                                        </div>
+                                    </div>
+                                    <div class="section-premium--item">
+                                        <img src="./assets/images/icones/check.png" />
+                                        <div>
+                                            <h4>THIRD FEATURE</h4>
+                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel eros vitae erat condimentum viverra a nec lacus.
+                                        </div>
+                                    </div>
+                            </div>
+                        </div>
+                    </div><div class="slide">
+                        <div class="slidearea">
+                            ...
+                        </div>
+                    </div><div class="slide">
+                        <div class="slidearea">
+                            ...
+                        </div>
+                    </div>
+                </div>
+                <div class="sliders-pointers">
+                    <div class="pointer active"></div>
+                    <div class="pointer"></div>
+                    <div class="pointer"></div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="default dark">
+        <div class="sectionTitle">Some Facts</div>
+        <div class="sectionDesc">About our work</div>
+        <div class="sectionBody">
+            <div class="section-facts">
+                <div class="section-fact">
+                    <h3>1000</h3>
+                    <div class="section-fact-line"></div>
+                    <h4>Design Projects Released</h4>
+                    <p>Donec tincidunt cursus</p>
+                </div>
+                <div class="section-fact">
+                    <h3>900</h3>
+                    <div class="section-fact-line"></div>
+                    <h4>Photos</h4>
+                    <p>Morbi ex felis, tincidunt sed hendrerit</p>
+                </div>
+                <div class="section-fact">
+                    <h3>500</h3>
+                    <div class="section-fact-line"></div>
+                    <h4>Marketing Ideas</h4>
+                    <p>Donec tincidunt cursus</p>
+                </div>
+                <div class="section-fact">
+                    <h3>100</h3>
+                    <div class="section-fact-line"></div>
+                    <h4>Exhibitions</h4>
+                    <p>Morbi ex felis, tincidunt sed</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="section-share">
+        <div class="section-share--legend">
+            <img src="./assets/images/icones/share.png" />
+            Tell About Us:
+        </div>
+        <div class="section-share--item">
+            <div class="section-share--icon twitter">
+                <img src="assets/images/icones/twitter.png" />
+            </div>
+            152
+        </div>
+        <div class="section-share--item">
+            <div class="section-share--icon linkedin">
+                <img src="assets/images/icones/linkedin.png" />
+            </div>
+            152
+        </div>
+        <div class="section-share--item">
+            <div class="section-share--icon facebook">
+                <img src="assets/images/icones/facebook.png" />
+            </div>
+            152
+        </div>
+        <div class="section-share--item">
+            <div class="section-share--icon googleplus">
+                <img src="assets/images/icones/googleplus.png" />
+            </div>
+            152
+        </div>
+        <div class="section-share--item">
+            <div class="section-share--icon pinterest">
+                <img src="assets/images/icones/pinterest.png" />
+            </div>
+            152
+        </div>
+    </section>
+
+    <section class="default light">
+        <div class="sectionTitle">Contact Us</div>
+        <div class="sectionDesc">Our Agency Located in Melbourne, Australia</div>
+        <div class="sectionBody">
+            <div class="section-contact">
+                <form method="POST">
+                    <div class="section-contact--split">
+                        <input type="text" name="name" placeholder="NAME" />
+                        <input type="text" name="name" placeholder="EMAIL" />
+                    </div>
+                    <input type="text" name="name" placeholder="SUBJECT" />
+                    <textarea name="message" placeholder="MESSAGE"></textarea>
+                    <input type="submit" value="Send Message" class="button" />
+                </form>
+            </div>
+        </div>
+    </section>
     </main>
     <footer>
 
