Feat: New Section Added: 'Section Map'

--- a/index.html
+++ b/index.html
@@ -565,6 +565,43 @@
             </div>
         </div>
     </section>
+
+    <section class="section-map">
+        <div class="section-map--area">
+            <div class="section-map--info">
+                <div class="section-map--info-item">
+                    <div class="section-map--info-item-img">
+                        <img src="./assets/images/icones/arroba.png" alt="Ícone de carta postal">                        
+                    </div>
+                    PO Box 16122 Collins Street West Victoria 8007 Australia
+                </div>
+                <div class="section-map--info-item">
+                    <div class="section-map--info-item-img">
+                        <img src="./assets/images/icones/localizacao.png" alt="Ícone de localizção">                        
+                    </div>
+                    121 King Street, Melbourne Victoria 3000 Australia
+                </div>
+                <div class="section-map--info-item">
+                    <div class="section-map--info-item-img">
+                        <img src="./assets/images/icones/telefone.png" alt="Ícone do telefone">                        
+                    </div>
+                    +00 0 1234 5678
+                </div>
+                <div class="section-map--info-item">
+                    <div class="section-map--info-item-img">
+                        <img src="./assets/images/icones/arroba.png" alt="Ícone do email">                        
+                    </div>
+                    Bukingdesign@gmail.com
+                </div>  
+                <div class="section-map--info-item">
+                    <div class="section-map--info-item-img">
+                        <img src="./assets/images/icones/web.png" alt="Ícone do site">                        
+                    </div>
+                    www.envato.com
+                </div>
+            </div>
+        </div>
+    </section>
     </main>
     <footer>
 
