--- a/index.html
+++ b/index.html
@@ -603,8 +603,28 @@
         </div>
     </section>
     </main>
-    <footer>
 
+    <footer>
+        <div class="footer--area">
+            <div class="footer--item area1">
+                <div class="footer-social">
+                    <a href=""><img src="./assets/images/icones/twitter.png" alt="Ícone do Twiter" /></a>
+                    <a href=""><img src="./assets/images/icones/linkedin.png" alt="Ícone do Linkedin"/></a>
+                    <a href=""><img src="./assets/images/icones/facebook.png" alt="Ícone do Facebook"/></a>
+                    <a href=""><img src="./assets/images/icones/googleplus.png" alt="Ícone do Google Plus"/></a>
+                    <a href=""><img src="./assets/images/icones/pinterest.png" alt="Ícone do Pinterest"/></a>
+                </div>
+            </div>
+            <div class="footer--item area2">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel eros vitae erat condimentum viverra a nec lacus. Maecenas eros lectus, rhoncus vel dictum vel, dignissim eget ligula. Vestibulum id tempus quam, sed pellentesque quam. Vestibulum porta aliquet risus, ac rhoncus sem aliquet ac. Donec tincidunt cursus elit vitae euismod.
+            </div>
+            <div class="footer--item area3">
+                <form method="POST">
+                    <input type="email" name="email" placeholder="EMAIL TO SUBSCRIBE" />
+                    <button class="button">Subscribe</button>
+                </form>
+            </div>
+        </div>
     </footer>
 </body>
 
