--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width,minimum-scale-1.0,initial-scale=1.0">
     <title>Awax</title>
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
@@ -19,6 +19,7 @@
                 <img src="./assets/images/logo.jpg" alt="Logo do projeto">
             </div>
             <div class="menu">
+                <img class="menu-opener" src="./assets/images/icones/menu.png">
                 <nav>
                     <ul>
                         <li class="active"><a href="">HOME</a></li>
