--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <header>
+    <header>        
         <div class="container">
             <div class="logo">
                 <img src="./assets/images/logo.jpg" alt="Logo do projeto">
@@ -314,7 +314,7 @@
             <div class="section-testimonials">
                 <div class="sliders" style="margin-left:0;">
                     <div class="slide">
-                        <div class="slidearea">
+                        <div class="slideArea">
                             <img class="section-testimonials--avatar" src="./assets/media/homem2.png" />
                             <div class="section-testimonials--name">John Doe</div>
                             <div class="section-testimonials--role">Head of PR Department</div>
@@ -322,7 +322,7 @@
                             <div class="section-testimonials--quote">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel eros vitae erat condimentum viverra a nec lacus. Maecenas eros lectus, rhoncus vel dictum vel, dignissim eget ligula. Vestibulum id tempus quam, sed pellentesque quam.</div>
                         </div>
                     </div><div class="slide">
-                        <div class="slidearea">
+                        <div class="slideArea">
                             <img class="section-testimonials--avatar" src="./assets/media/homem2.png" />
                             <div class="section-testimonials--name">John Doe2</div>
                             <div class="section-testimonials--role">Head of PR Department</div>
@@ -330,7 +330,7 @@
                             <div class="section-testimonials--quote">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel eros vitae erat condimentum viverra a nec lacus. Maecenas eros lectus, rhoncus vel dictum vel, dignissim eget ligula. Vestibulum id tempus quam, sed pellentesque quam.</div>
                         </div>
                     </div><div class="slide">
-                        <div class="slidearea">
+                        <div class="slideArea">
                             <img class="section-testimonials--avatar" src="./assets/media/homem2.png" />
                             <div class="section-testimonials--name">John Doe3</div>
                             <div class="section-testimonials--role">Head of PR Department</div>
@@ -429,7 +429,7 @@
             <div class="section-premium">
                 <div class="sliders" style="margin-left:0;">
                     <div class="slide">
-                        <div class="slidearea">
+                        <div class="slideArea">
                             <div class="section-premium--left">
                                 <img src="./assets/media/livros.png" />
                             </div>
@@ -461,11 +461,11 @@
                             </div>
                         </div>
                     </div><div class="slide">
-                        <div class="slidearea">
+                        <div class="slideArea">
                             ...
                         </div>
                     </div><div class="slide">
-                        <div class="slidearea">
+                        <div class="slideArea">
                             ...
                         </div>
                     </div>
@@ -521,31 +521,31 @@
             <div class="section-share--icon twitter">
                 <img src="assets/images/icones/twitter.png" />
             </div>
-            152
+            <span>152</span> 
         </div>
         <div class="section-share--item">
             <div class="section-share--icon linkedin">
                 <img src="assets/images/icones/linkedin.png" />
             </div>
-            152
+            <span>152</span> 
         </div>
         <div class="section-share--item">
             <div class="section-share--icon facebook">
                 <img src="assets/images/icones/facebook.png" />
             </div>
-            152
+            <span>152</span> 
         </div>
         <div class="section-share--item">
             <div class="section-share--icon googleplus">
                 <img src="assets/images/icones/googleplus.png" />
             </div>
-            152
+            <span>152</span> 
         </div>
         <div class="section-share--item">
             <div class="section-share--icon pinterest">
                 <img src="assets/images/icones/pinterest.png" />
             </div>
-            152
+            <span>152</span> 
         </div>
     </section>
 
@@ -627,6 +627,8 @@
             </div>
         </div>
     </footer>
+
+    <script src="./assets/scripts/core.js"></script>
 </body>
 
 </html>
